<resources>
    <string name="app_name">EatAnywhere</string>
    <string name="nav_home_title">Home</string>
    <string name="nav_favorites_title">Favorites</string>
    <string name="nav_profile_title">Profile</string>
    <string name="near_your_location">Near your location</string>
    <string name="favorites_page_title">Your Favorites</string>
    <string name="filter_button_text">Filter</string>
    <string name="sort_button_text">Sort</string>
    <string name="map_button_text">Map</string>
    <string name="login_text">EatAnywhere</string>
    <string name="login_subtext">Log In to continue</string>
    <string name="login_button_text">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="search_hint">Search locations</string>

    <string name="thumb">Thumb</string>
    <string name="restaurant_title">Title</string>
    <string name="price_category">Price/Category</string>
    <string name="Rating">Score</string>
    <string name="reviews_count">Reviews count</string>
    <string name="location">Location</string>
    <string name="informations">Informations</string>
    <string name="schedule">Schedule</string>
    <string name="phone_numbers">Phone Numbers</string>
    <string name="directions">Directions</string>
    <string name="reviews">Reviews</string>
    <string name="review_date">Review Date</string>
    <string name="rating_text">Rating Text</string>
    <string name="review_text">Review Text</string>
    <string name="review_text_null">Review is empty.</string>
    <string name="visit">Visit</string>
    <string name="spinner_description">Sort restaurants by:</string>
    <string name="title_activity_maps">Map</string>

    <string name="user_full_name">Full Name</string>
    <string name="user_first_name">First Name</string>
    <string name="user_last_name">Last Name</string>
    <string name="user_phone_number">Phone Number</string>
    <string name="user_address">Address</string>
    <string name="user_nationality">Nationality</string>
    <string name="user_email">Email</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="logout_button">Logout</string>
    <string name="saveButton">Save</string>

    <string name="edit_profile_activity_name">Edit Profile</string>
</resources>