<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:id="@+id/card_view_friend"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardUseCompatPadding="true"
    app:ignore="NamespaceTypo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="146dp">

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="33dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="14dp"
            android:contentDescription="@string/thumb"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/review_date"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="125dp"
            android:layout_marginBottom="111dp"
            android:layout_toEndOf="@+id/thumb"
            android:text="@string/review_date" />

        <TextView
            android:id="@+id/rating_text"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="253dp"
            android:layout_marginBottom="77dp"
            android:layout_toEndOf="@+id/profilePic"
            android:text="@string/rating_text"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/user_rating"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="281dp"
            android:layout_marginBottom="108dp"
            android:layout_toEndOf="@+id/profilePic"
            android:drawablePadding="5dp"
            android:text="@string/Rating"
            app:drawableEndCompat="@drawable/ic_baseline_star_24" />

        <TextView
            android:id="@+id/review_text"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="46dp"
            android:text="@string/review_text" />

        <TextView
            android:id="@+id/visit"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="221dp"
            android:layout_marginBottom="20dp"
            android:text="@string/visit"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>