<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_friend"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="146dp">

        <ImageView
            android:id="@+id/thumb"
            android:layout_width="105dp"
            android:layout_height="106dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="13dp"
            android:contentDescription="@string/thumb"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/PriceCategory"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="82dp"
            android:layout_toEndOf="@+id/thumb"
            android:text="@string/price_category" />

        <TextView
            android:id="@+id/Rating"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="112dp"
            android:layout_marginBottom="55dp"
            android:layout_toEndOf="@+id/thumb"
            android:text="@string/Rating" />

        <TextView
            android:id="@+id/Restaurant_title"
            android:layout_width="271dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="108dp"
            android:layout_toEndOf="@+id/thumb"
            android:text="@string/restaurant_title" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>