<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/thumb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/thumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:drawablePadding="10dp"
            android:text="@string/restaurant_title"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_baseline_restaurant_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thumb"
            app:layout_constraintVertical_bias="0.025" />

        <TextView
            android:id="@+id/price_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/price_category"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rating"
            app:layout_constraintVertical_bias="0.027" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:drawablePadding="5dp"
            android:text="@string/location"
            app:drawableStartCompat="@drawable/ic_baseline_place_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.062"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_category"
            app:layout_constraintVertical_bias="0.033" />

        <TextView
            android:id="@+id/reviews_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews_count"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.19"
            app:layout_constraintStart_toEndOf="@+id/rating"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_name"
            app:layout_constraintVertical_bias="0.021" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:drawablePadding="5dp"
            android:text="@string/Rating"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_baseline_star_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_name"
            app:layout_constraintVertical_bias="0.021" />

        <TextView
            android:id="@+id/info_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/informations"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location"
            app:layout_constraintVertical_bias="0.077"
            android:drawablePadding="10dp"
            app:drawableStartCompat="@drawable/ic_baseline_info_24"/>

        <TextView
            android:id="@+id/reviews_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/reviews"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_numbers"
            app:layout_constraintVertical_bias="0.106"
            android:drawablePadding="10dp"
            app:drawableStartCompat="@drawable/ic_baseline_message_24"/>

        <TextView
            android:id="@+id/phone_numbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_numbers"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.056"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_section"
            app:layout_constraintVertical_bias="0.034"
            android:drawablePadding="5dp"
            app:drawableStartCompat="@drawable/ic_baseline_phone_24"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reviewsList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reviews_section" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>