<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_friend"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="3dp"
    android:rotationX="4"
    app:ignore="NamespaceTypo"
    card_view:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="164dp"
        android:layout_height="232dp">

        <ImageView
            android:id="@+id/thumbFav"
            android:layout_width="150dp"
            android:layout_height="108dp"
            android:contentDescription="@string/thumb"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.384"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.174" />

        <TextView
            android:id="@+id/PriceCategoryFav"
            android:layout_width="82dp"
            android:layout_height="19dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:text="@string/price_category"
            android:textColor="@android:color/black"
            android:textSize="10sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.666"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/Restaurant_TitleFav" />

        <TextView
            android:id="@+id/RatingFav"
            android:layout_width="48dp"
            android:layout_height="21dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:drawablePadding="5dp"
            android:text="@string/Rating"
            android:textSize="12sp"
            card_view:layout_constraintEnd_toStartOf="@+id/PriceCategoryFav"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/Restaurant_TitleFav" />

        <TextView
            android:id="@+id/Restaurant_TitleFav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:drawablePadding="5dp"
            android:text="@string/restaurant_title"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/thumbFav" />

        <TextView
            android:id="@+id/restaurant_locationFav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/location"
            android:textSize="12sp"
            app:autoSizeTextType="uniform"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/PriceCategoryFav"
            card_view:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>