<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    android:layout_marginTop="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/edit_profile_upper_section"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/editProfilePicture"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="135dp"
        android:background="@drawable/round_outline"
        android:contentDescription="@string/thumb"
        android:src="@drawable/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/SaveChanges"
            android:layout_width="141dp"
            android:layout_height="40dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/rounded_login"
            android:bottomLeftRadius="8dp"
            android:text="@string/saveButton"
            android:textColor="#F7121212"
            android:topLeftRadius="8dp"
            android:topRightRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.903"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_profile_upper_section"
            app:layout_constraintVertical_bias="0.072" />

        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nationality_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_input_layout">
        <EditText
            android:id="@+id/Nationality"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/user_nationality"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_input_layout">

        <EditText
            android:id="@+id/address"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/user_address"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input_layout">

        <EditText
            android:id="@+id/user_first_name"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/user_first_name"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfilePicture">

        <EditText
            android:id="@+id/email_profile"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="45dp"
            android:ems="10"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/number_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_input_layout">

        <EditText
            android:id="@+id/PhoneNumber"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/user_phone_number"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name_input_layout">

        <EditText
            android:id="@+id/LastName"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/user_last_name"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>